# ChangeLog for x11-misc/xcalendar
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcalendar/ChangeLog,v 1.4 2003/11/04 03:40:44 abhishek Exp $

  03 Nov 2003; Abhishek Amit <abhishek@gentoo.org> metadata.xml:
  Added metadata.xml

  26 Sep 2003; Michael Sterrett <msterret@gentoo.org> xcalendar-4.0.ebuild:
  x11-libs/xaw has gone away; seems to not need it to install; tidy

*xcalendar-4.0 (15 Dec 2002)

  15 Dec 2002; Seemant Kulleen <seemant@gentoo.org> xcalendar-4.0.ebuild
  files/xcalendar-4.0-motif-gentoo.diff files/digest-xcalendar-4.0 ChangeLog :

  New package which is an interactive calendar/notepad.  Submitted by:
  scott@lampert.org (Scott Lampert) in bug #11255.