@@ -1,5 +1,5 @@
+MD5 b1bc91db90e039dac019e6ece69d8d41 xcalendar-4.0.ebuild 997
+MD5 4ed99532affe2a17b2c31a449f065dfd ChangeLog 847
+MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
 MD5 b0dec6ead29d9994bcc47ad702aa16f8 files/xcalendar-4.0-motif-gentoo.diff 1104
 MD5 2ee59797b69df684e9303f8d171c0f86 files/digest-xcalendar-4.0 69
-MD5 c3a44303c57262ca643bce54bd5044ef xcalendar-4.0.ebuild 1008
-MD5 5d0c70f813ee57be9df793e5c3fc5a87 ChangeLog 757
-MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
