@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcalendar/xcalendar-4.0.ebuild,v 1.4 2003/09/27 02:39:04 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcalendar/xcalendar-4.0.ebuild,v 1.5 2004/01/11 13:41:42 lanius Exp $
 
 S=${WORKDIR}/${PN}
 DESCRIPTION="A simple interactive calendar program with a notebook capability"
@@ -12,7 +12,7 @@ LICENSE="as-is"
 KEYWORDS="~x86"
 
 DEPEND="virtual/x11
-		motif? ( >=x11-libs/openmotif-2.2.1 )"
+		motif? ( x11-libs/openmotif )"
 
 src_compile() {
 	if use motif
