@@ -1,6 +1,6 @@
-MD5 33478976329664a8f7509baf6928e787 ChangeLog 3799
+MD5 e4418cc678794fdee37fc8b5251ca66c xlockmore-5.04.ebuild 1845
+MD5 80d34edfdca895db75f407cd3e2e061e xlockmore-5.08.2.ebuild 1901
+MD5 c41d2278c3088d8d2f01591df4a87a8a ChangeLog 3920
 MD5 fe402b096905cae8dcb4a503d3a838ac metadata.xml 173
-MD5 7748ce54b5744408b8602b44d18d33f3 xlockmore-5.04.ebuild 1839
-MD5 6f96b210603bae3ad145d32d57133556 xlockmore-5.08.2.ebuild 1895
 MD5 589c4732f3e791a2cad0f52c7ec09908 files/digest-xlockmore-5.04 68
 MD5 7c6285fb6c9ff44a2590f166ecd553ef files/digest-xlockmore-5.08.2 70
