@@ -1,8 +1,8 @@
+MD5 a3efa6d3318a586c773bbafdcf90d796 xplore-1.2a.ebuild 1203
+MD5 903644f5f364a69d5b6e2df4d41be3e9 xplore-1.1-r1.ebuild 1171
+MD5 bed7c1a8116fcd076c5dbbc459fa9efa ChangeLog 1622
+MD5 fe402b096905cae8dcb4a503d3a838ac metadata.xml 173
+MD5 f02d2cc80717a80d64c7eb02b6ec944c xplore-1.1e.ebuild 1182
 MD5 d81a9d6cffc3f9e5bbfd3c30fc5befb0 files/digest-xplore-1.1-r1 63
 MD5 443aaa2db2102227b3880e7a74d7cd23 files/digest-xplore-1.1e 64
 MD5 8e9d553f8c4cf7c2f33d108428abd8e7 files/digest-xplore-1.2a 64
-MD5 50d1fb410a8d5f5787e4351a054c0d67 xplore-1.2a.ebuild 1199
-MD5 903644f5f364a69d5b6e2df4d41be3e9 xplore-1.1-r1.ebuild 1171
-MD5 663da33d02e3d40871b79652337b087a ChangeLog 1532
-MD5 fe402b096905cae8dcb4a503d3a838ac metadata.xml 173
-MD5 f02d2cc80717a80d64c7eb02b6ec944c xplore-1.1e.ebuild 1182
