@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xplore/Attic/xplore-1.2a.ebuild,v 1.1 2003/11/20 23:21:13 port001 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xplore/Attic/xplore-1.2a.ebuild,v 1.2 2004/01/11 13:39:54 lanius Exp $
 
 IUSE=""
 
@@ -15,7 +15,7 @@ KEYWORDS="x86"
 
 # its webpage states the lesstif does not fully work with xplore
 DEPEND="virtual/x11
-	virtual/motif"
+	x11-libs/openmotif"
 #	>=x11-libs/openmotif-2.2"
 
 src_compile() {
