@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xlockmore
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.5 2004/01/05 13:11:36 weeve Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.6 2004/01/11 13:39:03 lanius Exp $
+
+  11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> xlockmore-5.04.ebuild,
+  xlockmore-5.08.2.ebuild:
+  fixed motif dep
 
   05 Jan 2004; Jason Wever <weeve@gentoo.org> xlockmore-5.04.ebuild,
   xlockmore-5.08.2.ebuild:
