@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xplore
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xplore/Attic/ChangeLog,v 1.2 2003/11/21 06:39:09 vapier Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xplore/Attic/ChangeLog,v 1.3 2004/01/11 13:39:54 lanius Exp $
+
+  11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> xplore-1.2a.ebuild:
+  fixed motif dep
 
 *xplore-1.2a (20 Nov 2003)
 
